# devscope-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  github_client.py  server.py
tests/: __init__.py  test_github_client.py  test_server.py
